# gamification_reborn

./: .editorconfig  Makefile  pyproject.toml
backend/: .pre-commit-config.yaml  Makefile  alembic.ini  bootstrap.py  database.py  main.py  pyproject.toml  settings.py
backend/api/: bootstrap.py  database.py  main.py
backend/api/authentication/: auth.py  utils.py
backend/api/integrations/: get_filters.py  get_user_img.py  users.py
backend/api/models/: auth_models.py  msg_models.py  users.py
backend/api/schemas/: database.py
backend/api/services/: img_resize.py
backend/api/transport/: auth_router.py  experemental.py  user_router.py
backend/authentication/: auth.py  utils.py
backend/dudesplay_api/: bootstrap.py  database.py  main.py  settings.py
backend/dudesplay_api/authentication/: auth.py  utils.py
backend/dudesplay_api/integrations/: get_filters.py  get_user_img.py
backend/dudesplay_api/models/: auth_models.py  database_scheme.py
backend/dudesplay_api/schemas/: database.py  database_scheme.py
backend/dudesplay_api/services/: img_resize.py  user_img_upload.py
backend/dudesplay_api/transport/: auth_router.py  experemental.py  user_router.py
backend/migration/: env.py
backend/migration/versions/: 07c5b8beee3c_.py  0b9a91ac7f48_.py  0f826631d144_.py  10882b207c07_.py  141ae3fc087b_.py  15279e5ca270_.py  28d85d6e5aa8_.py  2addc53ca58e_.py  2fa401efb3de_.py  32914eca361e_.py  3c32a5b88b00_нормализация_данных_о_видеоиграх.py  409569b453ea_.py  4c30a3d2fa45_.py  58bb46af1a2b_.py  73010552f8d8_.py  77fb5136108b_.py  942b3319ef80_.py  9484d1da685b_.py  9cf8627b29ef_.py  a4abad842ab7_.py  a5a94b7862d5_.py  bd081bc791a5_.py  bf8bd5930947_.py  c7b3f455f8e9_.py  cbbcc6d75259_.py  d1a86da5cd5b_.py  d6c2929601a5_.py  d82d6475e8f5_.py  d9eef786e25b_.py  f0ef873cd416_.py  f79b11634475_.py
backend/models/: auth.py  database.py  database_scheme.py  msg.py
backend/services/: cover_uploader.py  img_resize.py  user_img_upload.py
backend/transport/: auth.py  auth_router.py  user_router.py
dudesplay_api/: bootstrap.py  database.py  main.py  settings.py
dudesplay_api/authentication/: auth.py  utils.py
dudesplay_api/integrations/: get_user_img.py
dudesplay_api/models/: auth_models.py  database_scheme.py
dudesplay_api/services/: user_img_upload.py
dudesplay_api/transport/: auth_router.py  user_router.py
dudesplayface/: package.json
frontend/: package-lock.json
mbrw/: package-lock.json  package.json
migration/: env.py
migration/versions/: 130b285a2e99_.py  134828042d65_.py  2920c4743ae0_.py  2b4f20fad359_.py  2d3b14dbe579_user_table.py  473c0b351c6f_.py  (+7 more)
(+15 files in other folders)
